@@ -5,13 +5,15 @@ AUX ocsigenserver.confd 432 SHA256 f128306075b9a1cc062e7b49e79806affc0b11c68f791
 AUX ocsigenserver.initd 882 SHA256 7e8d232d06adce963795bf7bc58f715b5870c72a4a003d43074fee938869fd3c SHA512 89aff58a2427bb1f557796dcd30aebc88d87c604feaf9b8b9d68acb623b49cc0391889cdd468a4b443533d0fe49cd6cf5303cd38ba056e0465f913036d022c7d WHIRLPOOL 4cd19514b4565d9e701a0ff5047ee3e14df834a3064ceb2fac7dd9cf12aa87333ea808499a004dff0e81e117a29d6dbe72f5d0d4b26be6af60c3e6e9e833b1f7
 AUX pcre.patch 1533 SHA256 4c73846375ccfe3b113e649ccbd15239b0967d5ddb3d124cbec27c030f15ff03 SHA512 b9bb25da58dcf4548d2991a3ed446f5b21d2aee84d7829c632900bdb7dbfc65533568ecf2b38f745841c2b3069eee9c6848a6a74dc12a794cda4c5e36d562480 WHIRLPOOL b99b1bd469fc2c340d0cbd92e9fd5901c36eafeb22f4fca17b2be2b1876fe21b21021018d1333b8b4e41c54991d0a13d418796cb7b26e8633826cb4e1fc8bf21
 DIST ocsigenserver-2.2.0.tar.gz 1259122 SHA256 21d4d08dd00550647fc08cef214c0a651574671ee3542b7445f76b8234de1f68 SHA512 f1f98df2a00dcbdf9b9dcc5fb4213eb27cf68c66242bea85330d6f2bf772b958bbfed0b48630af6e12972638bf7bcf3e68c45aa4e3979cd1348e34d4da6c93f5 WHIRLPOOL b6c1f7daf676834793719e2222d528e0403bf25f6581ea6966beabeee4472641e32721aa626b9d67fbbc5c207096e3a1ee5e413763c0ff0b098cf7de8ad5505e
+DIST ocsigenserver-2.3.0.tar.gz 1263133 SHA256 d684dcb2084fc6cc241461b2a5663d5eb2550f4270080276eccf855c7b131c5f SHA512 ef3a4227eb739ff51e5c4889e0204b875a33ba4b6b8651b16ec3eeac2cbf3e98fa7287814e6b2d3fd3de6f9a0b4e5e27f6b1722adf3a0c5c214c136966f9edb5 WHIRLPOOL e0399cac6ec24eeb878894e6e7da47569c3aaa1ef480ae0eb101d24ac40925a1e9774b340d45033e8e821e3f6190a4e0ad49ddc8a1b920afee2126ec314480c5
 EBUILD ocsigenserver-2.2.0.ebuild 1967 SHA256 13bc0691019495e4d150899dbef0fb43371c48a61af0cec4c106d625b780af25 SHA512 5eb5d54b8ff7aaffae52ece29bda1bb2381ea5626a16a61fe5c9d28bd86765b969d3231284162da07cd836bfbb462e08b5b2e2cdd7b2d89148922087455b9c83 WHIRLPOOL 31e9d180282d7bce44b7585533bc88f5eccbb8bac07747221a7642899a030b626e7c979aa7657fbd78379629df96e10e7913fe6aa36709ed3d4522d7250a41a9
-MISC ChangeLog 1304 SHA256 77caf2a0a97ed3b5251f4c2a293ecde484d4692d02a561f04ef830ff420448ae SHA512 3d0ef2daa62a92aeb175b9a57b9d259c7cdc92e77954d8b7a461dabcc7a8f5dcc5155752243b23a87abdf38efd6d27a15cab4ce7a9a3bc881cf86f59db580407 WHIRLPOOL 4b8f12f7a9f87fd6d39d25863070599465b138bd8db713d11490d08eb9e4e13de006d972b292e717b7358f321af5245dec5a8e431541457246c4ed691ad81a6e
+EBUILD ocsigenserver-2.3.0.ebuild 1915 SHA256 31107b38b4bdf11e253c027dce2ada9bb0f87449d3b3c22f261b79c647a3d52a SHA512 7a882cbca7f27b11668f624960ccd2726fc5343b2c91d0693c24379ce9ba3171c3b914f988dd26d9bb9ddc287d11be8f7820da3de49857aa48927456867b1256 WHIRLPOOL 32ef565dbbae8fdc1a0ede5c0f346ead23504d5fadfe1510a0bf53fb133f084b3b28231fa0b683a76088f98e336bdf407ff7411cf42b0f20d06545a2cb0a901c
+MISC ChangeLog 1439 SHA256 f3cd1cd34c5023cce1659f48c01765508345c09168abee3c086591aff6e28616 SHA512 0ddcf735097992a21a2de86c63cb68f85a2e73a2fb10f692236b55e16518d03cbb0352012051236e929912550b4cac02481e2777e3de9c8cc8f069298e82df66 WHIRLPOOL 6a15f606937861b42c14a0cf33f765e88e2ca25ae1c2630792e372051fe946d1244bae5862a1c691bf56ba544f9f0fd1c2940478fe748eafebd9af55d5dc62fa
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlHuw+AACgkQvFcC4BYPU0pxmQCcC8NY1jGih32qBQMRoBJOECcX
-dl4AoI3tpzlvthxKvf+38SXYmG1TJijp
-=SLHY
+iEYEAREIAAYFAlMiFQwACgkQvFcC4BYPU0oD7gCeL6LiMV2nf4vRJyVOIaNAepfH
+OkcAnRnW4eXKZoaoaiz6f8G/RS5HCJaL
+=1++L
 -----END PGP SIGNATURE-----
