@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/ocsigenserver
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigenserver/ChangeLog,v 1.6 2013/07/23 17:56:47 aballier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigenserver/ChangeLog,v 1.7 2014/03/13 20:28:59 aballier Exp $
+
+*ocsigenserver-2.3.0 (13 Mar 2014)
+
+  13 Mar 2014; Alexis Ballier <aballier@gentoo.org>
+  +ocsigenserver-2.3.0.ebuild:
+  version bump
 
   23 Jul 2013; Alexis Ballier <aballier@gentoo.org> ocsigenserver-2.2.0.ebuild:
   eapi5, define subslot and add slot deps
